--- a/.env.test
+++ b/.env.test
@@ -1,49 +1,56 @@
 # ======== APP CONFIG ========
-HOST=0.0.0.0
-PORT=8080
-NODE_ENV=test
-APP_NAME=LEXIS
-APP_VERSION=1.0.0
+HOST=127.0.0.1
+PORT=3006
+NODE_ENV=development
+APP_NAME=omni
+APP_VERSION=0.1.0
 
 # ======== CORS CONFIG ========
-CORS_ORIGIN=https://meu-dominio.com
+CORS_ORIGIN=*
 
 # ======== DATABASE CONFIG (Postgres) ========
-POSTGRES_USER=test_user
-POSTGRES_PASSWORD=test_password
-POSTGRES_DB=lexis_production
-POSTGRES_HOST=prod-db-host
-POSTGRES_PORT=5432
+POSTGRES_USER=dev_user
+POSTGRES_PASSWORD=dev_password
+POSTGRES_DB=omni_development
+POSTGRES_HOST=localhost
+POSTGRES_PORT=3007
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
 
 # ======== REDIS CONFIG ========
-REDIS_HOST=prod-redis-host
-REDIS_PORT=6379
-REDIS_PASSWORD=test_redis_password
+REDIS_HOST=localhost
+REDIS_PORT=3008
+REDIS_PASSWORD=dev_redis_password
 
 # ======== FILE UPLOAD CONFIG ========
 MAX_FILE_SIZE=10485760 # 10 MB in bytes
 
 # ======== LOGGING CONFIG ========
-LOG_LEVEL=info
-LOG_DIR=/var/log/lexis
-LOG_PRETTY_COLORIZE=false
+LOG_LEVEL=debug
+LOG_DIR=./logs
+LOG_PRETTY_COLORIZE=true
 LOG_PRETTY_TRANSLATE_TIME=SYS:yyyy-mm-dd HH:MM:ss
 LOG_PRETTY_IGNORE=pid,hostname
 LOG_PRETTY_SINGLE_LINE=true
-LOG_FILE_MAX_DAYS=30
+LOG_FILE_MAX_DAYS=1
 LOG_FILE_ZIPPED=true
 LOG_REDACT_PATHS=req.headers.authorization,req.headers.cookie,req.headers["x-api-key"],*.password
 
 # ======== JWT CONFIG ========
-JWT_SECRET=coloque_uma_chave_secreta_super_segura_aqui
-JWT_EXPIRES_ON=7d
+JWT_SECRET=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+JWT_EXPIRES_IN=7d
+REFRESH_SECRET=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+REFRESH_EXPIRES_IN=14d
 
 # ======== RATE LIMIT CONFIG ========
 RATE_LIMIT_MAX=500
 RATE_LIMIT_WINDOW=1m
 RATE_LIMIT_BAN=10
 RATE_LIMIT_CACHE=50000
-RATE_LIMIT_NAMESPACE=lexis-prod-rate-limit-
-RATE_LIMIT_INFO_MESSAGE=Rate limiting is disabled in production
+RATE_LIMIT_NAMESPACE=omni-dev-rate-limit-
+RATE_LIMIT_INFO_MESSAGE=Rate limiting is disabled in development
+
+# ======== SEND EMAIL CONFIG ========
+EMAIL_API_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+EMAIL_FROM=seu@melhor.email
+EMAIL_SEND_TYPE=outbound
