--- a/package.json
+++ b/package.json
@@ -49,9 +49,12 @@
     "@fastify/cors": "^11.1.0",
     "@fastify/rate-limit": "^10.3.0",
     "@fastify/swagger": "^9.5.1",
+    "@prisma/client": "^6.14.0",
     "@scalar/fastify-api-reference": "^1.34.2",
+    "bcryptjs": "^3.0.2",
     "fastify": "^5.5.0",
     "fastify-type-provider-zod": "^5.0.3",
+    "jsonwebtoken": "^9.0.2",
     "pino": "^9.9.0",
     "zod": "^4.0.17"
   },
@@ -59,7 +62,9 @@
     "@eslint/js": "^9.33.0",
     "@tsconfig/node-ts": "^23.6.1",
     "@tsconfig/node24": "^24.0.1",
+    "@types/jsonwebtoken": "^9.0.10",
     "@types/node": "^24.2.1",
+    "@types/supertest": "^6.0.3",
     "@vitest/coverage-v8": "^3.2.4",
     "@vitest/ui": "^3.2.4",
     "esbuild": "^0.25.9",
@@ -70,6 +75,8 @@
     "lint-staged": "^16.1.5",
     "pino-pretty": "^13.1.1",
     "prettier": "3.6.2",
+    "prisma": "^6.14.0",
+    "supertest": "^7.1.4",
     "tsx": "^4.20.4",
     "typescript": "^5.9.2",
     "typescript-eslint": "^8.39.1",
