--- a/.env.example
+++ b/.env.example
@@ -1,8 +1,8 @@
 # ======== APP CONFIG ========
 HOST=127.0.0.1
 PORT=3006
-NODE_ENV=production
-APP_NAME=omni
+NODE_ENV=development
+APP_NAME=OmniNexus
 APP_VERSION=0.1.0
 
 # ======== CORS CONFIG ========
@@ -11,7 +11,7 @@ CORS_ORIGIN=*
 # ======== DATABASE CONFIG (Postgres) ========
 POSTGRES_USER=dev_user
 POSTGRES_PASSWORD=dev_password
-POSTGRES_DB=omni_production
+POSTGRES_DB=omni_development
 POSTGRES_HOST=localhost
 POSTGRES_PORT=3007
 
@@ -37,9 +37,9 @@ LOG_FILE_ZIPPED=true
 LOG_REDACT_PATHS=req.headers.authorization,req.headers.cookie,req.headers["x-api-key"],*.password
 
 # ======== JWT CONFIG ========
-JWT_SECRET=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+JWT_SECRET=1234
 JWT_EXPIRES_IN=7d
-REFRESH_SECRET=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+REFRESH_SECRET=1234
 REFRESH_EXPIRES_IN=14d
 
 # ======== RATE LIMIT CONFIG ========
@@ -48,9 +48,9 @@ RATE_LIMIT_WINDOW=1m
 RATE_LIMIT_BAN=10
 RATE_LIMIT_CACHE=50000
 RATE_LIMIT_NAMESPACE=omni-dev-rate-limit-
-RATE_LIMIT_INFO_MESSAGE=Rate limiting is disabled in production
+RATE_LIMIT_INFO_MESSAGE=Rate limiting is disabled in development
 
 # ======== SEND EMAIL CONFIG ========
-EMAIL_API_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaaa
+EMAIL_API_KEY=1234
 EMAIL_FROM=seu@melhor.email
 EMAIL_SEND_TYPE=outbound
