--- a/.env.test
+++ b/.env.test
@@ -1,19 +1,56 @@
+# ======== APP CONFIG ========
+HOST=127.0.0.1
+PORT=33336
 NODE_ENV=test
-PORT=3333
+APP_NAME=OmniNexus
+APP_VERSION=0.1.0
 
-POSTGRES_USER=test_user
-POSTGRES_PASSWORD=test_password
-POSTGRES_DB=test_db
-POSTGRES_HOST=db
-POSTGRES_PORT=3256
+# ======== CORS CONFIG ========
+CORS_ORIGIN=*
+
+# ======== DATABASE CONFIG (Postgres) ========
+POSTGRES_USER=dev_user
+POSTGRES_PASSWORD=dev_password
+POSTGRES_DB=omni_test
+POSTGRES_HOST=localhost
+POSTGRES_PORT=33337
 
 DATABASE_URL=postgresql://${POSTGRES_USER}:${POSTGRES_PASSWORD}@${POSTGRES_HOST}:${POSTGRES_PORT}/${POSTGRES_DB}?schema=public
 
-REDIS_HOST=redis
-REDIS_PORT=3255
-REDIS_PASSWORD=test_redis_password
+# ======== REDIS CONFIG ========
+REDIS_HOST=localhost
+REDIS_PORT=33338
+REDIS_PASSWORD=dev_redis_password
 
-JWT_SECRET=test_jwt_secret
-JWT_EXPIRES_IN=1h
-REFRESH_SECRET=test_refresh_secret
-REFRESH_EXPIRES_IN=2h
+# ======== FILE UPLOAD CONFIG ========
+MAX_FILE_SIZE=10485760 # 10 MB in bytes
+
+# ======== LOGGING CONFIG ========
+LOG_LEVEL=debug
+LOG_DIR=./logs
+LOG_PRETTY_COLORIZE=true
+LOG_PRETTY_TRANSLATE_TIME=SYS:yyyy-mm-dd HH:MM:ss
+LOG_PRETTY_IGNORE=pid,hostname
+LOG_PRETTY_SINGLE_LINE=true
+LOG_FILE_MAX_DAYS=1
+LOG_FILE_ZIPPED=true
+LOG_REDACT_PATHS=req.headers.authorization,req.headers.cookie,req.headers["x-api-key"],*.password
+
+# ======== JWT CONFIG ========
+JWT_SECRET=0123456789abcdef0123456789abcdef
+JWT_EXPIRES_IN=7d
+REFRESH_SECRET=fedcba9876543210fedcba9876543210
+REFRESH_EXPIRES_IN=14d
+
+# ======== RATE LIMIT CONFIG ========
+RATE_LIMIT_MAX=500
+RATE_LIMIT_WINDOW=1m
+RATE_LIMIT_BAN=10
+RATE_LIMIT_CACHE=50000
+RATE_LIMIT_NAMESPACE=omni-dev-rate-limit-
+RATE_LIMIT_INFO_MESSAGE=Rate limiting is disabled in test
+
+# ======== SEND EMAIL CONFIG ========
+EMAIL_API_KEY=aaaaaaaaaaaaaaaaaaaaaaaaaa
+EMAIL_FROM=seu@melhor.email
+EMAIL_SEND_TYPE=outbound
