--- a/.github/workflows/test-coverage.yml
+++ b/.github/workflows/test-coverage.yml
@@ -37,11 +37,12 @@ jobs:
 
     steps:
       - uses: actions/checkout@v4
+        with:
+          fetch-depth: 2
 
       - uses: actions/setup-node@v4
         with:
           node-version: 24
-          fetch-depth: 2
 
       - name: Install dependencies
         run: npm ci
@@ -59,7 +60,7 @@ jobs:
           NODE_ENV: test
 
       - name: Run tests with coverage
-        run: npm run test:coverage
+        run: npx vitest run --coverage --reporter=junit --outputFile=junit.xml
         env:
           NODE_ENV: test
 
@@ -69,3 +70,10 @@ jobs:
           token: ${{ secrets.CODECOV_TOKEN }}
           files: ./coverage/lcov.info
           fail_ci_if_error: true
+
+      - name: Upload test results to Codecov
+        if: ${{ !cancelled() }}
+        uses: codecov/test-results-action@v1
+        with:
+          token: ${{ secrets.CODECOV_TOKEN }}
+          files: ./junit.xml
