--- a/.env.test
+++ b/.env.test
@@ -26,9 +26,9 @@ REDIS_PASSWORD=dev_redis_password
 MAX_FILE_SIZE=10485760 # 10 MB in bytes
 
 # ======== LOGGING CONFIG ========
-LOG_LEVEL=debug
+LOG_LEVEL=info
 LOG_DIR=./logs
-LOG_PRETTY_COLORIZE=true
+LOG_PRETTY_COLORIZE=false
 LOG_PRETTY_TRANSLATE_TIME=SYS:yyyy-mm-dd HH:MM:ss
 LOG_PRETTY_IGNORE=pid,hostname
 LOG_PRETTY_SINGLE_LINE=true
